backend_kube_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: us-aesthetic-storyservice-app
spec:
  selector:
    app: us-aesthetic-storyservice
  ports:
  - port: 8080
    targetPort: 8080
