frontend_kube_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: us-aesthetic-frontend-app
spec:
  selector:
    app: us-aesthetic-frontend
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
