images_kube_app.yml
apiVersion: v1
kind: Service
metadata:
  name: us-aesthetic-images-app
spec:
  selector:
    app: us-aesthetic-images
  ports:
  - port: 8100
    targetPort: 8100
